-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0
-
None
-
b8d3d18b0 (dev), 31322ff9e (dev), cabdea966 (dev), 9fe398f9d (tqtc/lts-6.8), 7ae886156 (tqtc/lts-6.5)
When writing
i.toLocaleUpperCase('tr-TR')
I would expect to have İ not I.
It's working fine in C++ using `QLocale tr = QLocale("tr_TR"); tr.toUpper("i")` but this is not available in QML.
I've attached a small example to reproduce.
- duplicates
-
QTBUG-109962 toLocale{Upper,Lower}Case() string methods ignore locale arguments
-
- Reported
-
- relates to
-
QTBUG-56923 V4's Date claims to extend toLocale*String() in ways expressly forbidden by ECMA-262
-
- Open
-
For Gerrit Dashboard: QTBUG-112898 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
472459,37 | V4: make JS functions toLocale{Lower,Upper}Case aware of the locale | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
476728,38 | Provide windows native toUpper() and toLower() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
601567,40 | Provide macOS native toUpper() and toLower() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
663914,5 | Backport parts of "Provide windows native toUpper() and toLower()" | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | +1 |
669667,2 | Backport parts of "Provide windows native toUpper() and toLower()" | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |