V4: make JS functions toLocale{Lower,Upper}Case aware of the locale

We now call the toUpper/toLower function for the correct locale.
It fixes the case of the Turkish uppercase i is İ not I.

Fixes: QTBUG-112898
Change-Id: Ibd0174656e0aa561747490f3e6d52c639bd06b63
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>